Fix: Safe not found alignment (#596)

--- a/src/components/common/PagePlaceholder/styles.module.css
+++ b/src/components/common/PagePlaceholder/styles.module.css
@@ -3,6 +3,6 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100%;
   text-align: center;
+  flex: 1;
 }
